Made the join waitlist button to link to the waitlist section
Signed-off-by: Andrew <officiallyohara@gmail.com>

--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
                       the tools you need to stay on track.
                     </p>
                     <a
-                      href="about.html"
+                      href="#join-waitlist"
                       class="theme-btn mt-4 wow fadeInUp"
                       data-wow-delay=".7s"
                       >Join Our Waitlist <i class="far fa-arrow-right"></i>
@@ -475,7 +475,7 @@
                       Use your coins to shop for exciting rewards and celebrate
                       your progress.
                     </p>
-                    <a href="about.html" class="theme-btn mt-4"
+                    <a href="#join-waitlist" class="theme-btn mt-4"
                       >Join Our Waitlist <i class="far fa-arrow-right"></i>
                     </a>
                   </div>
@@ -529,7 +529,7 @@
                       professional financial advisors to find solutions to your
                       personal financial challenges.
                     </p>
-                    <a href="about.html" class="theme-btn mt-4"
+                    <a href="#join-waitlist" class="theme-btn mt-4"
                       >Join Our Waitlist <i class="far fa-arrow-right"></i>
                     </a>
                   </div>
@@ -578,7 +578,7 @@
                       Get your own personal AI assistant, ready to answer your
                       questions and provide insights on your financial status.
                     </p>
-                    <a href="about.html" class="theme-btn mt-4"
+                    <a href="#join-waitlist" class="theme-btn mt-4"
                       >Join Our Waitlist <i class="far fa-arrow-right"></i>
                     </a>
                   </div>
@@ -622,7 +622,7 @@
                       Education to empower you with the insights and skills
                       needed for financial success.
                     </p>
-                    <a href="about.html" class="theme-btn mt-4"
+                    <a href="#join-waitlist" class="theme-btn mt-4"
                       >Join Our Waitlist <i class="far fa-arrow-right"></i>
                     </a>
                   </div>
@@ -1083,8 +1083,8 @@
       </div>
     </section>
 
-    <!-- Cta Newsletter Section Start -->
-    <section class="cta-newsletter-section fix section-padding">
+    <!-- Waitlist Section -->
+    <section class="cta-newsletter-section fix section-padding" id="join-waitlist">
         <div class="bottom-shape">
             <img src="assets/img/hero/bottom-shape.png" alt="shape-img" />
         </div>  
