--- a/index.html
+++ b/index.html
@@ -1221,7 +1221,7 @@
                       <i class="fas fa-phone-alt"></i>
                     </div>
                     <div class="content">
-                      <h4><a href="tel:00012345688">+233 (024) 6022990</a></h4>
+                      <h4><a href="tel:+233246022990">+233 (024) 6022990</a></h4>
                     </div>
                   </div>
                 </div>
