--- a/index.html
+++ b/index.html
@@ -188,8 +188,8 @@
       <div class="container">
         <div class="brand-wrapper">
           <h6 class="wow fadeInUp" data-wow-delay=".2s">Supported By</h6>
-          <div class="swiper brand-slider">
-            <div class="swiper-wrapper">
+          <div class="">
+            <!-- <div class="swiper-wrapper">
               <div class="swiper-slide" style="width: 200px !important">
                 <div class="brand-image">
                   <img
@@ -197,8 +197,8 @@
                     alt="black-star-group-logo"
                   />
                 </div>
-              </div>
-              <div class="swiper-slide" style="width: 200px !important">
+              </div> -->
+              <div class="">
                 <div class="brand-image">
                   <img
                     src="assets/img/brand/founders-institute.png"
