--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
       <div class="container">
         <div class="brand-wrapper">
           <h6 class="wow fadeInUp" data-wow-delay=".2s">Supported By</h6>
-          <div class="">
+          <div class="wow fadeInUp" data-wow-delay=".2s">
             <!-- <div class="swiper-wrapper">
               <div class="swiper-slide" style="width: 200px !important">
                 <div class="brand-image">
