Changed Testimonial Client name from Joshua to Josh
As requested by Peter

--- a/index.html
+++ b/index.html
@@ -1015,7 +1015,7 @@
                           alt="author-img"
                         />
                         <div class="content">
-                          <h5>Joshua</h5>
+                          <h5>Josh</h5>
                         </div>
                       </div>
                       <p>
