--- a/index.html
+++ b/index.html
@@ -679,7 +679,7 @@
                 <img src="assets/img/video-bg-popup.jpg" alt="img" />
                 <div class="video-box">
                   <a
-                    href="https://youtu.be/ZajmrmmPOmA?si=lErWkqzcdStzwWoR"
+                    href="https://www.youtube-nocookie.com/embed/ZajmrmmPOmA?si=UPrZnMJPmqTINhik"
                     class="video-buttton ripple video-popup"
                   >
                     <i class="fas fa-play"></i>
